resources/carservices/deployment-carservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-services-deployment
  labels:
    app: car-services
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-services
  template:
    metadata:
      labels:
        app: car-services
    spec:
      containers:
      - name: car-services
        image: elroydevops/car-serv
        ports:
        - containerPort: 80
