resources/carservices/ingress-carservice.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-services-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "carwyn.lbserver.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: car-services-service
            port:
              number: 80
